# Tiralabs-polunetsint-

./: .gitignore  README.md  pyproject.toml  route.html  tasks.py
app/: benchmark.py
app/maps/: tiny.map  tiny.map.scen
app/pathfinding/: __init__.py  __main__.py  astar.py  cli.py  grid.py  heuristics.py  jps.py  paths.py  result.py  scenarios.py  visualize.py
app/tests/: test_algorithms.py  test_jps.py  test_paths.py
documentaatio/: Testausdokumentti.md  Toteutusdokumentti.md  benchmarktuloksia.md  maartittelydokumentti.md  viikkoraportti3.md  viikkoraportti5.md  viikkoraportti6.md
